--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta property="og:title" content="Apple Music.js">
+	<meta property="og:description" content="How close can we get to Apple Music with ReactJS?">
+	<meta property="og:image" content="images/og.png">
+	<meta property="og:url" content="http://tannerv.com/music">
     <meta name="theme-color" content="#000000">
     <!--
       manifest.json provides metadata used when your web app is added to the
