--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta property="og:title" content="Apple Music.js">
-	<meta property="og:description" content="How close can we get to Apple Music with ReactJS?">
-	<meta property="og:image" content="images/og.png">
+	<meta property="og:description" content="How far can JavaScript take us?">
+	<meta property="og:image" content="images/og.jpg">
 	<meta property="og:url" content="http://tannerv.com/music">
     <meta name="theme-color" content="#000000">
     <!--
