--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	 <meta property="og:title" content="Apple Music.js">
 	 <meta property="og:description" content="How far can JavaScript take us?">
-	 <meta property="og:image" content="http://tannerv.com/music/images/og.png">
+	 <meta property="og:image" content="https://puu.sh/DejtJ/5177338bf5.png">
 	 <meta property="og:url" content="http://tannerv.com/music">
     <meta name="theme-color" content="#000000">
     <!--
